--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@nestjs/serve-static": "^2.1.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
@@ -37,6 +38,7 @@
     "@types/jest": "^26.0.15",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.6",
+    "@types/serve-index": "^1.7.30",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
